# invenio-admin

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: api.rst  conf.py  configuration.rst  examplesapp.rst  index.rst  usage.rst
examples/: app-fixtures.sh  app-setup.sh  app-teardown.sh  app.py  requirements.txt
invenio_admin/: __init__.py  config.py  ext.py  filters.py  forms.py  permissions.py  proxies.py  version.py  views.py
invenio_admin/templates/invenio_admin/: index.html
tests/: conftest.py  test_examples_app.py  test_filters.py  test_forms.py  test_invenio_admin.py
tests/demo/: __init__.py  four.py  onetwo.py  three.py
