# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2018 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-admin
version = attr: invenio_admin.__version__
description = "Invenio module that adds administration panel to the system."
long_description = file: README.rst, CHANGES.rst
keywords = invenio admin flask-admin
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-admin
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Flask-Admin>=1.5.6
    Flask-Menu>=0.5.0
    Flask-Principal>=0.4.0
    invenio-accounts>=1.2.1
    invenio-base>=1.2.9
    invenio-db>=1.0.9
    invenio-i18n>=2.0.0

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-theme>=1.3.4
    pytest-invenio>=1.4.3
    sphinx>=4.5
    invenio-access>=1.0.0
# Kept for backwards compatibility
docs =
access =

[options.entry_points]
invenio_base.apps =
    invenio_admin = invenio_admin:InvenioAdmin
invenio_base.blueprints =
    invenio_admin = invenio_admin.views:blueprint
invenio_access.actions =
    admin_access = invenio_admin.permissions:action_admin_access

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_admin/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_admin/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_admin/translations/messages.pot
output-dir = invenio_admin/translations/

[update_catalog]
input-file = invenio_admin/translations/messages.pot
output-dir = invenio_admin/translations/

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_admin --cov-report=term-missing
filterwarnings = ignore::pytest.PytestDeprecationWarning
testpaths = tests invenio_admin
